# FinancialAdvisor

./: .c8rc.json  .env.example  .eslintrc.js  .gitignore  .nycrc.json  .pre-commit-config.yaml  .prettierrc  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  LICENSE  Makefile  README.md  REFACTOR_SUMMARY.md  ROADMAP.md  eslint.config.js  package-lock.json  package.json  renovate.json  svelte.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  network-policy.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.md
.github/workflows/: auto-approve-copilot-runs.yml  ci.yml  copilot-pr-lifecycle.yml  (+4 more)
.praxis/: package.json  tsconfig.json
docs/: ACCOUNT_INTEGRATION.md  AI_INTEGRATION_TESTING.md  AI_TESTING_IMPLEMENTATION_SUMMARY.md  API.md  COPILOT_INTEGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  ETHEREUM_BRIDGE_SERVICES.md  GLOBAL_OBP_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  LOCAL_FIRST_INTEGRATION_PLAN.md  LOCAL_FIRST_REFACTOR_SUMMARY.md  MOBILE.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE3_IMPLEMENTATION.md  PHASE4_COMPLETION.md  PHASE4_IMPLEMENTATION.md  PHASE4_POST_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  PLAID_IMPLEMENTATION_STATUS.md  PLAID_INTEGRATION_PLAN.md  ROADMAP.md
issues/: issue-1.md
scripts/: build.ps1  build.sh  setup.ps1  setup.sh
src/: app.css  extension.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
test/: runTest.ts
(+94 files in other folders)
