[package]
name = "financial-advisor"
version = "0.2.0"
description = "Personal AI Financial Advisor"
authors = ["Plures Team"]
license = "MIT"
repository = "https://github.com/plures/FinancialAdvisor"
edition = "2021"

[lib]
name = "financial_advisor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "financial-advisor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
